new script for Github api, not youtube

--- a/achive/youtube_attempt.ipynb
+++ b/achive/youtube_attempt.ipynb
@@ -115,7 +115,12 @@
     "\n",
     "Tim Walz was 16 and JD vance was 4, so maybe if we cover politicians it will be doable? Let's try searching for 1 hour of Donald Trump:\n",
     "\n",
-    "Okay 4,400 videos...nevermind. Interestingly, Kamala Harris was only 566 in the exact same time period.\n"
+    "Okay 4,400 videos...nevermind. Interestingly, Kamala Harris was only 566 in the exact same time period.\n",
+    "\n",
+    "try switching to tech ceos:\n",
+    "Elon Musk: 1052 in an hour\n",
+    "Jeff Bezos: 122\n",
+    "Mark Zuckerberg: 72\n"
    ]
   },
   {
